--- a/estilos/login.css
+++ b/estilos/login.css
@@ -4,4 +4,43 @@
 #45DBE0  #1C80EB   #1D22E1
  */
 
- 
+ * {
+    padding: 0px;
+    margin: 0px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    box-sizing: border-box;
+ }
+
+ body, html {
+    background-color: #1C80EB;
+    height: 100vh;
+    width: 100vw;
+ }
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px black;
+}
+section#login > div#imagem {
+    background:  #1C80EB url(../imagens/imagem-login.jpg);
+    height: 200px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: block;
+}
+section#login > div#formulario {
+    display: block;
+    padding: 10px;
+}
