--- a/estilos/login.css
+++ b/estilos/login.css
@@ -54,3 +54,53 @@ div#formulario > h1 {
 div#formulario > p {
     font-size: 0.8em;
 }
+
+div.campo > label {
+    display: none;
+}
+
+form > div.campo {
+    display: block;
+    background-color: #1D22E1;
+    width: 100%;
+    height: 40%;
+    border-radius: 5px;
+    margin: 5px 0px;
+    padding: 5px;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    border: none;
+    border-radius: 5px;
+    background-color:#1C80EB;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color:#1D22E1;
+}
+form > a.botao {
+    text-align: center;
+    font-size: 1em ;
+    display: block;
+    width: 100%;
+    height: 40%;
+    background-color: #51a3fa;
+    color: black;
+    border-radius: 5px;
+    text-decoration: none;
+    margin-top: 5px;
+    padding: 5px 0px 5px;
+}
+
+form > a.botao:hover {
+    background-color: #1D22E1;
+}
+
+form > a.botao > span {
+    font-size: 0.8em;
+}
