--- a/estilos/login.css
+++ b/estilos/login.css
@@ -25,7 +25,6 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
     background-color: white;
     width: 250px;
@@ -33,11 +32,12 @@ section#login {
     border-radius: 20px;
     box-shadow: 0px 0px 10px black;
     transition: width 1s, height 1s;
+    transform: translate(-50%, -50%);
     transition-timing-function: ease;
 }
 section#login > div#imagem {
     background:  #1C80EB url(../imagens/imagem-login.jpg);
-    height: 200px;
+    height: 180px;
     background-size: cover;
     background-repeat: no-repeat;
     display: block;
@@ -65,8 +65,8 @@ form > div.campo {
     width: 100%;
     height: 40%;
     border-radius: 5px;
-    margin: 5px 0px;
-    padding: 5px;
+    margin: 2px 2px;
+    padding: 3px;
 }
 
 form > input[type=submit] {
@@ -103,4 +103,22 @@ form > a.botao:hover {
 
 form > a.botao > span {
     font-size: 0.8em;
+}
+div.campo > span {
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color:#45DBE0;
+    font-size: 1em;
+    width: calc(100%- 44px);
+    height: 100%;
+    border-radius: 5px;
+    transform: translateY(-10px);
+}
+div.campo > input:focus-within {
+    background-color: white;
 }
