--- a/estilos/login.css
+++ b/estilos/login.css
@@ -27,7 +27,7 @@ section#login {
     left: 50%;
     overflow: hidden;
     background-color: white;
-    width: 250px;
+    width: 255px;
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px black;
@@ -62,11 +62,12 @@ div.campo > label {
 form > div.campo {
     display: block;
     background-color: #1D22E1;
-    width: 100%;
-    height: 40%;
+    width: 95%;
+    height: 20%;
     border-radius: 5px;
     margin: 2px 2px;
     padding: 3px;
+    flex-wrap: nowrap;
 }
 
 form > input[type=submit] {
@@ -95,6 +96,7 @@ form > a.botao {
     text-decoration: none;
     margin-top: 5px;
     padding: 5px 0px 5px;
+    flex-wrap: nowrap
 }
 
 form > a.botao:hover {
